--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,9 +1,9 @@
-
 /********** Base styles **********/
 * {
   box-sizing: border-box;
 }
 h1 {
+  text-align: center
   margin-bottom: 15px;
 }
 
@@ -110,4 +110,3 @@ p {
     width: 100%;
   }
 }
-
