--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -113,7 +113,7 @@ p {
 }
 /********** Mobile devices only **********/
 @media (max-width: 767px) {
-  .col-md-12 {
+  .col-sd-12 {
     float: left;
     border: 1px solid green;
   }
