--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -12,7 +12,8 @@ p {
   background-color: #A52A2A;
   width: 90%;
   height: 150px;
-  margin-right: auto;
+  margin-right: 0px;
+  margin-top: 0px;
   margin-left: auto;
   font-family: Helvetica;
   color: white;
