--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -10,8 +10,8 @@ h1 {
 p {
   border: 1px solid black;
   background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
+  width: 20%;
+  height: 10%;
   margin-right: 0px;
   margin-top: 0px;
   margin-left: auto;
