--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -38,7 +38,6 @@ div>div{
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-     margin-right:10px;
     /*border: 1px solid green;*/
   }
   .col-lg-1 {
@@ -51,7 +50,8 @@ div>div{
     width: 25%;
   }
   .col-lg-4 {
-    width: 33.33%;
+    width: 30%;
+    margin-right: 1%;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -83,7 +83,6 @@ div>div{
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-     margin-right:10px;
    /* border: 1px solid green;*/
   }
   .col-md-1 {
@@ -102,7 +101,8 @@ div>div{
     width: 41.66%;
   }
   .col-md-6 {
-    width: 50%;
+    width: 45%;
+    margin-right:2%;
   }
   .col-md-7 {
     width: 58.33%;
@@ -127,7 +127,6 @@ div>div{
 @media (max-width: 767px) {
   .col-sd-12 {
     float: left;
-     margin-right:10px;
     /*border: 1px solid green;*/
   }
   .col-sd-12 {
