--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -53,6 +53,7 @@ div>div{
   .col-lg-4 {
     width: 30%;
     margin-right: 1%;
+    margin-left: 1%;
     margin-bottom: 5px;
   }
   .col-lg-5 {
@@ -105,6 +106,7 @@ div>div{
   .col-md-6 {
     width: 45%;
     margin-right:2%;
+    margin-left: 2%;
     margin-bottom: 5px;
   }
   .col-md-7 {
