--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -7,9 +7,33 @@ h1 {
   margin-bottom: 15px;
 }
 
-p {
+p.beef {
   border: 1px solid black;
   background-color: #A52A2A;
+  width: 20%;
+  height: 10%;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-left: auto;
+  font-family: Helvetica;
+  color: white;
+}
+
+p.chicken {
+  border: 1px solid black;
+  background-color: blue;
+  width: 20%;
+  height: 10%;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-left: auto;
+  font-family: Helvetica;
+  color: white;
+}
+
+p.pork {
+  border: 1px solid black;
+  background-color: green;
   width: 20%;
   height: 10%;
   margin-right: 0px;
