--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -53,7 +53,7 @@ p.pork {
 div>div{
   background-color: #d3d3d3; 
   height:200px;
-  border: 1px solid green;
+  border: 1px solid black;
   overflow:hidden;
  
 }
