--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -10,6 +10,7 @@ h1 {
 p.beef {
   border: 1px solid black;
   background-color: #A52A2A;
+  text-align: center;
   width: 20%;
   height: 10%;
   margin-right: 0px;
@@ -21,6 +22,7 @@ p.beef {
 
 p.chicken {
   border: 1px solid black;
+  text-align: center;
   background-color: blue;
   width: 20%;
   height: 10%;
@@ -33,6 +35,7 @@ p.chicken {
 
 p.pork {
   border: 1px solid black;
+  text-align: center;
   background-color: green;
   width: 20%;
   height: 10%;
